[package]
name = "vegosh"
version = "1.0.0"
edition = "2024"
description = "A fixed-capacity, statically allocated Robin Hood hash table."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bongacat07/vegosh-rs"
homepage = "https://github.com/bongacat07/vegosh-rs"
documentation = "https://docs.rs/vegosh"
readme = "README.md"

keywords = [
    "hashmap",
    "robin-hood",
    "static",
    "fixed-capacity",
]

categories = [
    "data-structures",
]

[dependencies]
rapidhash = "4.4.2"
